--- a/LuaToolDotNet/LuaToolDotNet.csproj
+++ b/LuaToolDotNet/LuaToolDotNet.csproj
@@ -65,6 +65,7 @@
     <Compile Include="InstructionForm.designer.cs">
       <DependentUpon>InstructionForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="IOUtils.cs" />
     <Compile Include="LuaFile.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -74,7 +75,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Undumper.cs" />
     <EmbeddedResource Include="ConstantForm.resx">
       <DependentUpon>ConstantForm.cs</DependentUpon>
     </EmbeddedResource>
