--- a/LuaToolDotNet/LuaToolDotNet.csproj
+++ b/LuaToolDotNet/LuaToolDotNet.csproj
@@ -58,6 +58,13 @@
     <Compile Include="ConstantTableForm.designer.cs">
       <DependentUpon>ConstantTableForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ErrorInfo.cs" />
+    <Compile Include="FileInfoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FileInfoForm.Designer.cs">
+      <DependentUpon>FileInfoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Global.cs" />
     <Compile Include="InstructionForm.cs">
       <SubType>Form</SubType>
@@ -80,6 +87,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ConstantTableForm.resx">
       <DependentUpon>ConstantTableForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FileInfoForm.resx">
+      <DependentUpon>FileInfoForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InstructionForm.resx">
       <DependentUpon>InstructionForm.cs</DependentUpon>
