--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,11 @@ jobs:
       name: win/vs2019
     steps:
       - run:
-          command: MSBuild ../LuaToolDotNet.sln /t:Build /p:Configuration=Release /p:TargetFramework=v4.7.2
-          shell: powershell.exe
+        command: ls
+        shell: powershell.exe
+      - run:
+        command: pwd
+        shell: powershell.exe
+      - run:
+        command: MSBuild ../LuaToolDotNet.sln /t:Build /p:Configuration=Release /p:TargetFramework=v4.7.2
+        shell: powershell.exe
