--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,3 +12,5 @@ jobs:
       - checkout
       - run:
           command: MSBuild .\LuaToolDotNet.sln /t:Build /p:Configuration=Release /p:TargetFramework=v4.7.2
+      - store_artifacts:
+          path: ./LuaToolDotNet/bin/Release/LuaToolDotNet.exe
