--- a/LuaToolDotNet/LuaToolDotNet.csproj
+++ b/LuaToolDotNet/LuaToolDotNet.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>lua-file-format-symbol.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -149,8 +152,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\start-button.png" />
     <None Include="Resources\start_button.png" />
+    <None Include="Resources\lua-file-format-symbol.ico" />
+    <Content Include="lua-file-format-symbol.ico" />
     <Content Include="ToDoList.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
